[package]
name = "units"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
uom = { version = "0.37.0", features = ["serde"] }

[lib]

[[bin]]
name = "server"
path = "src/main.rs"
